--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,90 @@
+/* ITC Avant Garde Gothic Pro Bold
+
+font-family: itc-avant-garde-gothic-pro, sans-serif;
+
+font-weight: 700;
+
+font-style: normal;
+
+
+ITC Avant Garde Gothic Pro Book
+
+font-family: itc-avant-garde-gothic-pro, sans-serif;
+
+font-weight: 300;
+
+font-style: normal;
+
+
+ITC Avant Garde Gothic Pro Medium
+
+font-family: itc-avant-garde-gothic-pro, sans-serif;
+
+font-weight: 500;
+
+font-style: normal; */
+
+
+
 * {
-     margin: 0;
-     padding: 0;
      box-sizing: border-box;
+     margin: 0;
 }
 
-header {
+html {
+     scroll-behavior: smooth;
+     background-color: white;
+}
+
+body {
+     color: white;
+     font-size: 20px;
+     text-decoration: none;
+     margin: 30px 50px 0 50px;
+     height: 920px;
+     overflow: hidden;
+     font-family: itc-avant-garde-gothic-pro, sans-serif;
+
+}
+
+.showcase {
      position: absolute;
-     width: 100%;
-     height: 8vh;
      top: 0;
      left: 0;
-     background-color: black;
-     color: white;
-     padding: 0 2rem;
-     
+     height: 110vh;
+     z-index: -20;
+     filter: blur(10px);
 }
 
-nav {
-     width: 100%;
-     height: 100%;
+.containerParent {
      display: flex;
+     flex-direction: column;
+}
+
+.container {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: nowrap;
      justify-content: space-between;
      align-items: center;
 }
 
-.menu {
+.rec {
      display: flex;
-     justify-content: space-between;
-     align-items: center;
-     list-style: none;
-     width: 500px;
-     list-style: none;
+     justify-content: center;
+     font-size: 100px;
+     text-align: end;
+     line-height: 160px;
+     margin-top: 100px;
 }
 
-.menu li a {
-     color: white;
+.container-credit {
+     display: flex;
+     margin-top: 185px;
+
+}
+
+a {
      text-decoration: none;
-}
-
-.open {
-     display: block;
-}
-
-.close {
-     display: none;
-}
-
-@media all and (min-width: 1px){
-     .menu {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          background-color: red;
-          flex-direction: column;
-     }
+     color: white;
 }
